<resources>
    <string name="game_app_name">互动游戏</string>
    <string name="game_app_name_debug">互动游戏Debug</string>

    <string name="game_exit">退出</string>

    <!--    Splash page-->
    <string name="game_error_desc">RTM初始化出错</string>
    <string name="game_error_happened_click_to_refresh">出错了，再试一次</string>
    <!--    Room List-->
    <string name="game_please_create_a_room">请创建一个直播间</string>
    <string name="game_desc_create_room">创建直播间</string>
    <string name="game_desc_room_list_empty">房间列表为空</string>

    <!--    Create Room-->
    <string name="game_flip_camera">翻转相机</string>
    <string name="game_random_room_name">随机生成房间名</string>
    <string name="game_title_room_name">直播间名字:</string>
    <string name="game_live_begin">开始直播</string>
    <string name="game_beauty">美颜</string>
    <string name="game_setting">设置</string>

    <!--    ROOM-->
    <string name="game_input_hint">说点什么…</string>
    <string name="game_host_list">主播列表</string>
    <string name="game_invite_host_pk">游戏PK邀请</string>
    <string name="game_empty_host_list">没有可邀请的主播,刷新试试</string>
    <string name="game_tools">工具</string>
    <string name="game_camera">摄像头</string>
    <string name="game_camera_tip">是否发布本地视频流</string>
    <string name="game_mic">麦克风</string>
    <string name="game_mic_tip">是否发布本地音频流</string>
    <string name="game_game">游戏</string>
    <string name="game_exit_game">退出游戏</string>
    <string name="game_exit_pk">终止连麦</string>
    <string name="game_ready_message">游戏即将开始，等待其他玩家…</string>
    <string name="game_accept_message">%s邀请您加入游戏</string>

    <string name="game_donate">赠送</string>
    <string name="game_gift">礼物</string>
    <string name="game_gift_received">%s赠送了%s%s</string>
    <string name="game_user_msg"><![CDATA[
         <font color=\'#FFFFFF\'>%s：</font>%s
        ]]></string>

    <string name="game_game_mode">游戏模式</string>
    <string name="game_pk_with_mic">连麦PK</string>


    <string name="game_screen_share_request_denied">Screen share cancelled</string>
    <string name="game_screen_share_version_unsupported">Screen Share do not support on this Android version</string>
    <string name="game_notify_recording_screen">正在录制屏幕内容…</string>
    <string name="game_notify_service_desc">Notice that we are trying to capture the screen!!</string>
    <string name="game_notify_channel_id">agora_media_project</string>

    <!--    权限-->
    <string name="game_permission_refused">APP运行所必需的权限被拒绝</string>
    <string name="game_permission_alert">此APP功能为视频通话，录音及摄像头权限为功能必需，是否继续？</string>

    <string-array name="game_gift_name_list">
        <item>铃铛</item>
        <item>冰淇淋</item>
        <item>红酒</item>
        <item>蛋糕</item>
        <item>戒指</item>
        <item>手表</item>
        <item>钻石</item>
        <item>火箭</item>
    </string-array>
    <string-array name="game_gift_name_list_emoji">
        <item>🔔</item>
        <item>🍦</item>
        <item>🍷</item>
        <item>🍰</item>
        <item>💍</item>
        <item>⌚️</item>
        <item>💎</item>
        <item>🚀</item>
    </string-array>
    <string-array name="game_gift_name_list_eng">
        <item>SuperBell</item>
        <item>SuperIcecream</item>
        <item>SuperWine</item>
        <item>SuperCake</item>
        <item>SuperRing</item>
        <item>SuperWatch</item>
        <item>SuperDiamond</item>
        <item>SuperRocket</item>
    </string-array>
</resources>